// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile should show tile preview chart when that type is given 1`] = `
<pf-tile
  ngAppRoot={[Function String]}
  previewModel={[Function Object]}
  tile={[Function Object]}
  tilePreviewType={[Function TilePreviewType]}
>
  <div
    class="tile m-0 p-1 test cssClass"
    ng-reflect-klass="tile m-0 p-1"
    ng-reflect-ng-class="test cssClass"
    ng-reflect-ng-switch="1"
  >
    
    
    <a
      class="tile-anchor-overlay"
      href="test tile url"
    />
    
    
    <h4>
      test tile
    </h4>
    
  
    
    
    
    
    <pf-tile-preview-chart>
      
    
    </pf-tile-preview-chart>
    
  
    
    
    
  
    
    
    
  
    
    
    
  
  
  </div>
  
</pf-tile>
`;

exports[`Tile should show tile preview icon when that type is given 1`] = `
<pf-tile
  ngAppRoot={[Function String]}
  previewModel={[Function Object]}
  tile={[Function Object]}
  tilePreviewType={[Function TilePreviewType]}
>
  <div
    class="tile m-0 p-1 test cssClass"
    ng-reflect-klass="tile m-0 p-1"
    ng-reflect-ng-class="test cssClass"
    ng-reflect-ng-switch="2"
  >
    
    
    <a
      class="tile-anchor-overlay"
      href="test tile url"
    />
    
    
    <h4>
      test tile
    </h4>
    
  
    
    
    
    
    
  
    
    
    <pf-tile-preview-icon>
      
    
    </pf-tile-preview-icon>
    
  
    
    
    
  
    
    
    
  
  
  </div>
  
</pf-tile>
`;

exports[`Tile should show tile preview list when that type is given 1`] = `
<pf-tile
  ngAppRoot={[Function String]}
  previewModel={[Function Object]}
  tile={[Function Object]}
  tilePreviewType={[Function TilePreviewType]}
>
  <div
    class="tile m-0 p-1 test cssClass"
    ng-reflect-klass="tile m-0 p-1"
    ng-reflect-ng-class="test cssClass"
    ng-reflect-ng-switch="3"
  >
    
    
    <a
      class="tile-anchor-overlay"
      href="test tile url"
    />
    
    
    <h4>
      test tile
    </h4>
    
  
    
    
    
    
    
  
    
    
    
  
    
    
    <pf-tile-preview-list>
      
    
    </pf-tile-preview-list>
    
  
    
    
    
  
  
  </div>
  
</pf-tile>
`;
